example/src/snapshots/rust_sitter_example__arithmetic__tests__arithmetic_grammar-2.snap
---
source: example/src/arithmetic.rs
expression: "grammar::parse(\"1 - 2\")"
---
Ok(
    Sub(
        Number(
            1,
        ),
        (),
        Number(
            2,
        ),
    ),
)
