example/src/snapshots/rust_sitter_example__arithmetic__tests__arithmetic_grammar-6.snap
---
source: example/src/arithmetic.rs
expression: "grammar::parse(\"1 * 2 - 3\")"
---
Ok(
    Sub(
        Mul(
            Number(
                1,
            ),
            (),
            Number(
                2,
            ),
        ),
        (),
        Number(
            3,
        ),
    ),
)
