example/src/snapshots/rust_sitter_example__arithmetic__tests__arithmetic_grammar.snap
---
source: example/src/arithmetic.rs
expression: "grammar::parse(\"1\")"
---
Ok(
    Number(
        1,
    ),
)
