example/src/snapshots/rust_sitter_example__arithmetic__tests__failed_parses.snap
---
source: example/src/arithmetic.rs
expression: "grammar::parse(\"1 + 2\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [
                    ParseError {
                        reason: UnexpectedToken(
                            "+",
                        ),
                        start: 2,
                        end: 3,
                    },
                ],
            ),
            start: 0,
            end: 3,
        },
    ],
)
